# MIPS-emulator

./: CMakeLists.txt  LICENSE  README.md  example.asm
src/: assembler.cpp  assembler.h  cache.cpp  cache.h  emulator.cpp  emulator.h  instructions.cpp  instructions.h  main.cpp  memory.cpp  memory.h  registers.cpp  registers.h  utils.cpp  utils.h
